2011-07-28  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Changed the event pagination query
	  (was too slow).

2011-07-28  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	include/functions.php
	operation/agentes/stat_win.php
	general/pandora_help.php: Create new functions to manage pandora
	languages.
	Fix pandora_help languages to use the user language, no always the
	global language.
	Fix som SESSION index little bugs

2011-07-27  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Hide agent details unless we have
	  a valid agent id.

2011-07-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed bad parameters 
	on enterprise_hook

2011-07-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_servers.php: Added information for the new
	  enterprise servers.

2011-07-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed shortcut icon link to avoid
	favicon.ico miss error in the apache log

2011-07-27  Sancho lerena <slerena@artica.es>

	* operation/servers/view_server.php: Fixed position of create button.

2011-07-27  Sergio Martin <sergio.martin@artica.es>

	* extensions/module_groups.php
	general/logon_ok.php: Change overflow-x:scroll by
	overflow-x:auto to avoid the ugly scroll when no 
	necessary

2011-07-27  Sergio Martin <sergio.matin@artica.es>

	* include/functions_html.php
	godmode/reporting/reporting_builder.php
	godmode/reporting/reporting_builder.item_editor.php: Fixed several
	warnings of undeclared variables and use of not supported parameter
	of function strstr in php 3.2

2011-07-27  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/status_monitor.php: Update the monitor search with "Filter" button.

2011-07-26  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Changed null languages
	by "default" in tusuario to new languages system
